2008-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_layer): We don't know a real boudning box at the
	time a new plot is started, but fig2dev insists that some numbers be
	present; give it the bounding box of the full plot.
	Bug #1906855

	* src/graph3d.c (draw3d_graph_box):  Turn off clipping while drawing
	the border + ticks, since we don't want to clip "out" ticks.
	Bug #1906933

2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
	Allow user to set colorbar label rotatation if the bar is vertical.

	* term/cgm.trm:  Adjust palette size based on actual number of
	color slots remaining in the table.

2008-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm:  Clean up terminal code.
	Use shared routines gp_alloc(), int_expression().
	Switch to using same set of colors as other terminals (web_color_rgbs).
	Handle RGB color request by returning closest match to a known color.
	Don't over-write user colors with each new palette.
	Decouple dash pattern from line color.

	* src/command.h:  refresh_request() depends on VOLATILE_REFRESH, not
	USE_MOUSE.

2008-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_fillbox CGM_filled_polygon):  Move the
	management of fill styles and pm3d fill from CGM_fillbox() to 
	CGM_filled_polygon().  This is necessary because while boxes and
	histograms call filled_polygon via term->fillbox(), the pm3d code
	calls term->filled_polygon directly.
	Bugfix.

2008-02-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_format set_tics set_tic_prop) docs/gnuplot.doc:
	Allow string variables to specify the tic format. Also introduce
	a format keyword for "set tics" and "set {axis} tics".
	"set tics format 'foo'"  is equivalent to "set format 'foo'"
	"set ytics format 'baz'" is equivalent to "set format y 'baz'"

2008-02-26  Ethan A Merritt  <merritt@u.washington.edu>
